add controled fields and form and reset on submit

--- a/src/components/SuccessModal/success-modal.scss
+++ b/src/components/SuccessModal/success-modal.scss
@@ -1,55 +1,45 @@
 @use "../../styles/vars";
 
-@media screen and (min-width: 1024px) {
+.success-modal {
+    z-index: 2;
+    background: rgba(0, 0, 0, 0.5);
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: 0;
 
-    .success-modal {
-        z-index: 2;
-        background: rgba(0, 0, 0, 0.5);
-        width: 100vw;
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        position: fixed;
-        top: 0;
-        left: 0;
-    
-        &__window {
-            border: none;
-            border-radius: .5rem;
-            background-color: vars.$highlight-text;
-            color: vars.$light-text;
-            padding: 2 * vars.$gutter;
-            font-size: 1.5rem;
-            font-weight: bold;
-            animation: .3s fade-in forwards;
-            position: fixed;
-            top: 45%;
-            left: 40%;
-    
-            &__close-button {
-                font-size: 1.5rem;
-                position: absolute;
-                top: 0;
-                right: 0;
-                margin: .5 * vars.$gutter;
-                transition: all .3s;
-                transform: rotate(45deg);
-    
-                &:hover {
-                    color: vars.$hover-text;
-                    cursor: pointer;
-                }
+    &__window {
+        border: none;
+        border-radius: .5rem;
+        background-color: vars.$highlight-text;
+        color: vars.$light-text;
+        padding: 2 * vars.$gutter;
+        font-size: 1.5rem;
+        font-weight: bold;
+        animation: .3s fade-in forwards;
+        position: relative;
+
+        &__close-button {
+            font-size: 2.5rem;
+            position: absolute;
+            top: 0;
+            right: 0;
+            margin: .5 * vars.$gutter;
+            transition: all .3s;
+            transform: rotate(45deg);
+
+            &:hover {
+                color: vars.$hover-text;
+                cursor: pointer;
             }
-    
-            &__text-content {
-                margin-top: vars.$gutter;
-            }
+        }
+
+        &__text-content {
+            margin: 2 * vars.$gutter 0;
         }
     }
 }
-
-
-@media screen and (min-width: 768px) and (max-width: 1023px) {}
-
-@media screen and (min-width: 767px) {}
