--- a/src/components/ContactForm/contact-form.scss
+++ b/src/components/ContactForm/contact-form.scss
@@ -91,6 +91,7 @@
         display: flex;
         flex-wrap: wrap;
         gap: .5 * vars.$gutter;
+        min-height: 100vh;
 
         &__input {
             width: 100%;
