--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -72,7 +72,7 @@
     .about {
         display: flex;
         flex-direction: column;
-        // min-height: 100vh;
+        min-height: 100vh;
         margin-top: 2 * vars.$gutter;
         width: 100%;
 
