--- a/src/components/ContactForm/contact-form.scss
+++ b/src/components/ContactForm/contact-form.scss
@@ -6,7 +6,24 @@
         display: flex;
         flex-wrap: wrap;
         gap: .5 * vars.$gutter;
-    
+
+        &__first-line {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            gap: .5 * vars.$gutter;
+
+            &__input {
+                width: 100%;
+                height: 2.5rem;
+                padding: 1rem;
+                border: none;
+                font-family: "Nunito", sans-serif;
+                font-size: 1.2rem;
+                background-color: vars.$light-grey;
+            }
+        }
+
         &__input {
             width: 100%;
             height: 2.5rem;
@@ -19,15 +36,7 @@
             &:focus {
                 border-bottom: 2px solid vars.$highlight-text;
             }
-    
-            &__name {
-                width: 49.47%;
-            }
-    
-            &__email {
-                width: 49.47%;
-            }
-    
+           
             &__message {
                 height: 10rem;
                 resize: none;
@@ -54,13 +63,30 @@
         flex-wrap: wrap;
         gap: .5 * vars.$gutter;
 
+        &__first-line {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            gap: .5 * vars.$gutter;
+
+            &__input {
+                width: 100%;
+                height: 2.5rem;
+                padding: 1rem;
+                border: none;
+                font-family: "Nunito", sans-serif;
+                font-size: 1.2rem;
+                background-color: vars.$light-grey;
+            }
+        }
+
         &__input {
             width: 100%;
             height: 2.5rem;
             padding: 1rem;
             border: none;
             font-family: "Nunito", sans-serif;
-            font-size: 1.5rem;
+            font-size: 1.2rem;
             background-color: vars.$light-grey;
 
             &:focus {
@@ -79,18 +105,36 @@
         }
 
         &__submit {
+            margin-left: auto;
             margin-top: .5 * vars.$gutter;
-            font-size: 1.5rem;
-            align-self: center;
+            font-size: 1rem;
         }
     }
 }
 
 @media screen and (max-width: 767px) {
     .form {
+        height: 100vh;
         display: flex;
-        flex-wrap: wrap;
+        flex-direction: column;
         gap: .5 * vars.$gutter;
+
+        &__first-line {
+            width: 100%;
+            display: flex;
+            flex-wrap: wrap;
+            gap: .5 * vars.$gutter;
+            
+            &__input {
+                width: 100%;
+                height: 2.5rem;
+                padding: 1rem;
+                border: none;
+                font-family: "Nunito", sans-serif;
+                font-size: 1.2rem;
+                background-color: vars.$light-grey;
+            }
+        }
 
         &__input {
             width: 100%;
@@ -98,7 +142,7 @@
             padding: 1rem;
             border: none;
             font-family: "Nunito", sans-serif;
-            font-size: 1rem;
+            font-size: 1.2rem;
             background-color: vars.$light-grey;
 
             &:focus {
@@ -116,9 +160,9 @@
         }
 
         &__submit {
+            margin-left: auto;
             margin-top: .5 * vars.$gutter;
             font-size: 1rem;
-            align-self: center;
         }
     }
 }
