--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -65,6 +65,7 @@
         width: 100%;
         display: flex;
         flex-direction: column;
+        justify-content: center;
         padding: .5 * vars.$gutter;
         margin-top: 2 * vars.$gutter;
 
