--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -6,7 +6,7 @@
     z-index: 2;
     color: vars.$light-text;
     position: fixed;
-    transform: translateX(-100%);
+    transform: translateX(-50%);
     transition: all .3s;
 
     &--active {
@@ -15,17 +15,15 @@
     
     &__nav {
       min-height: 100vh;
-      width: fit-content;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
       background-color: vars.$nav-background;
       font-size: 1.2rem;
-      padding: 4 * vars.$gutter 1.5 * vars.$gutter ;
+      padding: 4 * vars.$gutter vars.$gutter ;
   
       &__darkmode-toggle {
-        width: 100%;
         animation: .3 fade-out forwards;
         opacity: 0;
         transform: translateX(-100%);
@@ -33,6 +31,7 @@
         align-items: center;
         gap: vars.$gutter;
         font-size: 1rem;
+        margin-top: 2rem;
   
         &--active {
           animation: 1s translate-right forwards,
@@ -42,46 +41,36 @@
   
       &__close-button {
         color: vars.$light-text;
-        font-size: 2.5rem;
         position: absolute;
-        top: 0;
-        right: .7 * vars.$gutter;
+        top: 1.5rem;
+        right: 1.25rem;
         transition: all .3s;
   
-        &--active {
-          transform: rotate(45deg);
-          
-          &:hover {
-              transform: rotate(45deg);
-              color: vars.$hover-text;
-              cursor: pointer;
-          }
+        &:hover {
+            color: vars.$hover-text;
+            cursor: pointer;
         }
-  
+        
+        &--active {
+          transform: rotate(180deg);
+        }
       }
   
       &__list {
         display: flex;
         flex-direction: column;
+        gap: 1rem;
   
         &__item {
           transition: all .3s;
   
-          &:hover {
-              transform: translateX(.1rem);
-            }
-  
             &__link {
               padding: 1rem;
               display: flex;
-              flex-direction: column;
-              transition: all .3s;
-              animation: .3 fade-out forwards;
-              opacity: 0;
-              transform: translateX(-100%);
+              align-items: center;
+              gap: 1.5rem;
       
               &:hover {
-                color: vars.$hover-text;
                 cursor: pointer;
               }
               
@@ -92,28 +81,57 @@
                   cursor: default;
                 }
               }
-      
-              &--home-active {
-                animation: 
-                1s translate-right forwards,
-                .3s fade-in forwards;
+
+              &_text {
+                transition: all .3s;
+                animation: .3 fade-out forwards;
+                opacity: 0;
+                transform: translateX(-100%);
+
+                &--home-active {
+                  animation: 
+                  1s translate-right forwards,
+                  .3s fade-in forwards;
+                }
+
+                &--projects-active {
+                  animation:
+                    1s translate-right .1s forwards,
+                    .3s fade-in .1s forwards;
+                }
+
+                &--about-active {
+                  animation:
+                    1s translate-right .2s forwards,
+                    .3s fade-in .2s forwards;
+                }
+
+                &--contact-active {
+                  animation:
+                    1s translate-right .3s forwards,
+                    .3s fade-in .3s forwards;
+                }
               }
-              &--projects-active {
-                animation:
-                1s translate-right .1s forwards,
-                .3s fade-in .1s forwards;
-              }
-              
-              &--about-active {
-                animation:
-                1s translate-right .2s forwards,
-                .3s fade-in .2s forwards;
-              }
-              
-              &--contact-active {
-                animation:
-                1s translate-right .3s forwards,
-                .3s fade-in .3s forwards;
+
+              &_icon {
+                position: absolute;
+                right: 1.25rem;
+
+                &--home-active {
+                  position: unset;
+                }
+
+                &--projects-active {
+                  position: unset;
+                }
+
+                &--about-active {
+                  position: unset;
+                }
+
+                &--contact-active {
+                  position: unset;
+                }
               }
             }
         }
